NIT-16 Fix nitrooos's picture position on mobile

--- a/_sass/authors/authors.scss
+++ b/_sass/authors/authors.scss
@@ -7,6 +7,7 @@
       display: flex;
       float: none;
       justify-content: center;
+      margin-right: 30px;
     }
   }
 
